tests/errors/_questions/generated_errors/float_instead_int/float_in_int_func.c
int oper(int a)
{
	return a++;
}

int main()
{
	//int arr[2] = {1.1,2};
	float i = 10;
	oper(i);
	return 0;
}